fix(menu) : remove line-wrap for menu items titles

--- a/css/style.css
+++ b/css/style.css
@@ -451,9 +451,6 @@ template {
   padding-bottom: 7px;
   font-size: 18px;
   font-weight: 500;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .menu-item__infos {
