--- a/sass/components/_menu-item.scss
+++ b/sass/components/_menu-item.scss
@@ -33,9 +33,7 @@
 
     font-size: 18px;
     font-weight: 500;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+
 }
 
 .menu-item__infos {
